--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -6,22 +6,39 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  margin-left: 25%;
+  margin-top: 10px;
+  
+  
 }
 
 .title {
+  
+  margin-bottom: 3px;
   background: #e3f4ff;
+  border:5px solid white;
+  
+  
 }
 
 .content {
+  text-align: center;
   background: #e3f4ff;
+  margin-top: 0;
+  border: 5px solid white;
 }
 
 .button-container {
+  text-align: center;
   background: #e3f4ff;
+  padding: 5px;
+  border:5px solid white;
 }
 
 button {
+  display: block;
+  text-align: center;
   background: white;
   border: 1px solid #eee;
+  margin-left: 38%;
 }
