--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -1,8 +1,15 @@
 .container {
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
   background: dodgerblue;
   border: 4px solid midnightblue;
   width: 400px;
   height: 300px;
+
+
 }
 
 .box {
@@ -12,4 +19,7 @@
   border: 6px solid maroon;
   width: 80px;
   height: 80px;
+ 
+  
+  
 }
