--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,14 +1,29 @@
 .header  {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   font-family: monospace;
   background: papayawhip;
+  padding:8px;
+  
+}
+
+ul{
+  display:flex;
+  margin:0;
+  padding:0;
+  gap:8px;
 }
 
 .logo {
+
   font-size: 48px;
   font-weight: 900;
   color: tomato;
   background: white;
-  padding: 4px 32px;
+  padding: 4px 30px;
+  margin: auto;
+
 }
 
 ul {
