--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -8,9 +8,41 @@ img {
 }
 
 .title {
+  display:flex;
+  justify-content: center;
   font-size: 36px;
   font-weight: 900;
+  margin-bottom:32px ;
 }
+
+.first .second .third .fourth {
+display:flex;
+flex-direction:row;
+width: 200px;
+}
+
+
+.general {
+  display:flex;
+  gap: 52px;
+  justify-content: center;
+  align-self: center; 
+  
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* do not edit this footer */
 .footer {
